font-family i color dels botons iguals

--- a/front/assets/normalize.css
+++ b/front/assets/normalize.css
@@ -7,10 +7,11 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  font-family: 'Montserrat', sans-serif;
 }
 
 /* Sections
